--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang='en-US'>
 <head>
-	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 	<title>testApp</title>
 	<style type="text/css">
 		h3 {
@@ -18,7 +18,9 @@
 			color:#0C3;
 		}
 	</style>
-	<script src="demos/js/jquery.js"></script>
+	    <link rel="stylesheet" href="demos/css/themes/default/jquery.mobile-1.4.3.min.css">
+        <script src="demos/js/jquery.js"></script>
+        <script src="demos/js/jquery.mobile-1.4.3.min.js"></script>
 </head>
 <body>
 	<div>
