--- a/www/index.html
+++ b/www/index.html
@@ -3,13 +3,19 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Angular JS</title>
+<title>practical issues</title>
 <script src="js/angular.min.js"></script>
+<script src="js/sanitize.js"></script>
 <script src="js/main.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
-<body>
+<body ng-controller="ctrler">
 some thing
-<input type="text" ng-model="rvars.username" />
+<input type="text" ng-model="cast" />
+<div ng-repeat="cust in customers | filter:cast">
+{{ cust.name + ' @@ ' + cust.last }}
+</div>
+<input type="text" ng-model="myHtml" />
+<p data-ng-bind-html="myHtml"></p>
 </body>
 </html>
